--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -9,10 +9,6 @@ p {
   margin: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -24,12 +20,72 @@ a {
   text-decoration: none;
 }
 
-button {
-  cursor: pointer;
-}
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/* Base styles */
+.section {
+  padding-top: 0px;
+  padding-bottom: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    padding-top: 0px;
+    padding-bottom: 64px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .section {
+    padding-top: 0px;
+    padding-bottom: 164px;
+  }
+}
+
+.container {
+  min-width: 320px;
+  max-width: 375px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 704px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .container {
+    max-width: 1216px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
 }
