--- a/src/partials/about-blok.html
+++ b/src/partials/about-blok.html
@@ -1,5 +1,39 @@
 <!-- Olena Demydova -->
 
 <section class="about">
-  <h1>hi</h1>
+  <div class="about-block">
+    <div class="about-text-block">
+      <p class="about-big-text">
+        <span class="about-color-text">Yacht Adventures</span>
+         fleet is here to take you on the ultimate adventure. 
+         Each yacht is hand-picked for its comfort, style, and performance.
+      </p>
+      <ul class="about-small-text">
+        <li class="about-small-item">From spacious decks to state-of-the-art technology, our yachts are designed to provide the perfect blend of luxury and functionality. Take a look at our selection below and choose the yacht that matches your needs and preferences.</li>
+        <li class="about-small-item">No matter which yacht you choose, our experienced crew will ensure that your journey is smooth and enjoyable. Book now and get ready for an unforgettable adventure on the high seas.</li>
+      </ul>
+    </div>
+    <div class="about-image-block">
+      <ul class="about-image-list">
+        <li class="about-image-item">
+          <img class="about-image1" 
+          src="/src/images/about/mob_yacht1@x1.png" 
+          srcset="/src/images/about/mob_yacht1@x1.png 1x, /src/images/about/mob_yacht1@x2.png 2x" 
+          alt="Yacht" width="" height="">
+      </li>
+        <li class="about-image-item">
+          <img class="about-image2" 
+          src="/src/images/about/mob_yacht2@1x.png" 
+          srcset="/src/images/about/mob_yacht2@x1.png 1x, /src/images/about/mob_yacht2@x2.png 2x" 
+          alt="Yacht" width="" height="">
+      </li>
+        <li class="about-image-item">
+          <img class="about-image3" 
+          src="/src/images/about/mob_yacht3@x1.png" 
+          srcset="/src/images/about/mob_yacht3@x1.png 1x, /src/images/about/mob_yacht3@x2.png 2x" 
+          alt="Yacht" width="" height="">
+      </li>
+      </ul>
+    </div>
+  </div>
 </section>
