--- a/src/partials/services-block.html
+++ b/src/partials/services-block.html
@@ -1,5 +1,78 @@
 <!-- Olga Filipenko -->
 
-<section class="services">
-  <h1>hi</h1>
+<section class="section-service">
+
+<div class="container service-container">
+
+  <ul class="service-list">
+    <li class="service-item service-item-one">
+      <picture class="services-img services-fishing">
+        <source srcset="
+            ./img/services/diving_desc_1x.png 1x,
+            ./img/services/diving_desc_2x.png 2x
+          " media="(min-width: 1280px)" type="image/png" />
+
+        <source srcset="
+            ./img/services/diving_tab_1x.png 1x,
+            ./img/services/diving_tab_2x.png 2x
+          " media="(min-width: 768px)" type="image/png" />
+
+        <source srcset="
+            ./img/services/diving_mob_1x.png 1x,
+            ./img/services/diving_mob_2x.png 2x
+          " media="(min-width: 375px)" type="image/png" />
+
+        <img class="img-diving" src="./img/services/diving_desc_1x.png"
+          alt="a diving man wearing diving mask under the water" />
+      </picture>
+
+      <button class="service-button btn-one" type="button">Diving</button>
+    </li>
+
+    <li class="service-item service-item-two">
+      <picture class="services-img services-fishing">
+        <source srcset="
+            ./img/services/fishing_desc_1x.png 1x,
+            ./img/services/fishing_desc_2x.png 2x
+          " media="(min-width: 1280px)" type="image/png" />
+
+        <source srcset="
+            ./img/services/fishing_tab_1x.png 1x,
+            ./img/services/fishing_tab_2x.png 2x
+          " media="(min-width: 768px)" type="image/png" />
+
+        <source srcset="
+            ./img/services/fishing_mob_1x.png 1x,
+            ./img/services/fishing_mob_2x.png 2x
+          " media="(min-width: 375px)" type="image/png" />
+
+        <img class="img-fishing" src="./img/services/fishing_desc_1x.png" alt="fishing" />
+      </picture>
+
+      <button class="service-button btn-two" type="button">Fishing</button>
+    </li>
+    <li class="service-item service-item-three">
+      <picture class="services-img services-sunb">
+        <source srcset="
+                ./img/services/sunb_desc_1x.png 1x,
+                ./img/services/sunb_desc_2x.png 2x
+              " media="(min-width: 1280px)" type="image/png" />
+
+        <source srcset="
+                ./img/services/sunb_tab_1x.png 1x,
+                ./img/services/sunb_tab_2x.png 2x
+              " media="(min-width: 768px)" type="image/png" />
+
+        <source srcset="
+                ./img/services/sunb_mob_1x.png 1x,
+                ./img/services/sunb_mob_2x.png 2x
+              " media="(min-width: 375px)" type="image/png" />
+
+        <img class="img-sunb" src="./img/services/sunb_desc_1x.png" alt="sunb" />
+      </picture>
+      <button class="service-button btn-three" type="button">Sunbathing</button>
+    </li>
+  </ul>
+</div>
 </section>
+
