--- a/src/css/rent-block.css
+++ b/src/css/rent-block.css
@@ -1,5 +1,269 @@
 /* Надія Павлюченко */
 
-.rent{
-    background-color: rgb(247, 217, 190);
+.rent {
+  padding-bottom: 80px;
+  background-color: var(--blue-2);
+  color: var(--white);
+  position: relative;
+  overflow: hidden;
 }
+@media only screen and (min-width: 768px) {
+  .rent {
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .rent {
+    padding-bottom: 164px;
+  }
+}
+
+.rent-container {
+  position: relative;
+}
+@media only screen and (min-width: 768px) {
+  .rent-container {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.rent-container::after {
+  display: block;
+  position: absolute;
+  content: '';
+  width: 283px;
+  height: 283px;
+  transform: rotate(-44.916deg);
+  flex-shrink: 0;
+  border-radius: 283px;
+  opacity: 0.6000000238418579;
+  background: #91afba;
+  filter: blur(100px);
+
+  top: 200px;
+  left: 200px;
+  z-index: 0;
+}
+@media only screen and (min-width: 768px) {
+  .rent-container::after {
+    width: 413px;
+    height: 413px;
+    transform: rotate(-44.094deg);
+    border-radius: 413px;
+    top: 100px;
+    left: 600px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .rent-container::after {
+    width: 414px;
+    height: 414px;
+    transform: rotate(-45.074deg);
+    border-radius: 414px;
+    top: 180px;
+    left: 1000px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .rent-description {
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .rent-description {
+    margin-right: 69px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .rent-description {
+    margin-right: 188px;
+  }
+}
+
+.rent-title {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: -1.62px;
+  margin-bottom: 16px;
+}
+@media only screen and (min-width: 768px) {
+  .rent-title {
+    width: 287px;
+    font-size: 60px;
+    letter-spacing: -2.7px;
+    margin-bottom: 32px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .rent-title {
+    width: 282px;
+    margin-bottom: 64px;
+  }
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .form-label {
+    margin-bottom: 28px;
+  }
+}
+
+.form-textarea-label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .form-textarea-label {
+    margin-bottom: 32px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .form-textarea-label {
+    margin-bottom: 64px;
+  }
+}
+
+.label-text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: -0.63px;
+}
+@media only screen and (min-width: 768px) {
+  .label-text {
+    font-size: 16px;
+    letter-spacing: -0.72px;
+  }
+}
+
+.form-input {
+  height: 16px;
+}
+
+.rent-input {
+  background-color: transparent;
+  color: var(--white);
+  outline: transparent;
+  border: none;
+  border-bottom: 1px solid var(--white);
+}
+@media only screen and (min-width: 768px) {
+  .rent-input {
+    width: 364px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .rent-input {
+    width: 443px;
+  }
+}
+
+.form-textarea {
+  resize: none;
+}
+
+.form-btn {
+  display: inline-block;
+  min-width: 123px;
+  padding: 14px 28px;
+  border: 1px solid var(--white);
+  border-radius: 60px;
+  background-color: transparent;
+  color: var(--white);
+  fill: currentColor;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.1;
+  letter-spacing: -0.63px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover,
+.form-btn:focus {
+  color: var(--light-green);
+  border-color: var(--light-green);
+}
+
+/* modal styles */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(31, 33, 45, 0.6);
+  pointer-events: initial;
+
+  opacity: 0;
+  z-index: 20;
+  visibility: hidden;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  padding: 40px 24px;
+  /* position: absolute; */
+  top: 50%;
+  left: 50%;
+
+  /* --- */
+  opacity: 0;
+  visibility: hidden;
+  z-index: 30;
+  /* --- */
+
+  border-radius: 20px;
+  background: var(--blue-2);
+  color: var(--white);
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (max-width: 767px) {
+  .modal {
+    /* width: 95%; */
+    max-width: 335px;
+    height: 95%;
+    max-height: 396px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .modal {
+    padding: 64px;
+    width: 570px;
+    min-height: 522px;
+  }
+}
+
+.modal.active,
+.backdrop.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* .modal::after {
+  display: block;
+  position: absolute;
+  content: '';
+  width: 265px;
+  height: 265px;
+  transform: rotate(-45.074deg);
+  flex-shrink: 0;
+  border-radius: 265px;
+  opacity: 0.6000000238418579;
+  background: #91afba;
+  filter: blur(100px);
+
+  top: 150px;
+  left: 200px;
+} */
