--- a/src/partials/rent-block.html
+++ b/src/partials/rent-block.html
@@ -1,5 +1,150 @@
 <!-- Надія Павлюченко -->
 
 <section class="rent">
-  <p>hello</p>
+  <div class="container rent-container">
+    <div class="rent-description">
+      <h2 class="rent-title">Rent a yacht now</h2>
+      <div class="rent-image"></div>
+    </div>
+    <div class="form-container">
+      <form class="rent-form" name="rent_form" autocomplete="off">
+        <label class="form-label">
+          <span class="label-text">Full Name</span>
+          <input
+            type="text"
+            class="form-input rent-input"
+            name="user_name"
+            id="user_name"
+            pattern="^[A-Z][a-z]+$"
+          />
+        </label>
+        <label class="form-label">
+          <span class="label-text">Email</span>
+          <input
+            type="email"
+            class="form-input rent-input"
+            name="user_email"
+            id="user_email"
+            pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+          />
+        </label>
+        <label class="form-label">
+          <span class="label-text">Phone number</span>
+          <input
+            type="tel"
+            class="form-input rent-input"
+            name="user_tel"
+            id="user_tel"
+            pattern="^(?:\+?38)?0\d{9}$"
+          />
+        </label>
+        <label class="form-textarea-label">
+          <span class="label-text">Comment</span>
+          <textarea
+            class="rent-input form-textarea"
+            rows="4"
+            name="user_comment"
+            id="user_comment"
+          >
+          </textarea>
+        </label>
+        <button type="submit" class="form-btn js-open-modal" data-modal="1">
+          Send
+          <svg class="form-icon" width="18" height="9">
+            <use href=""></use>
+          </svg>
+        </button>
+      </form>
+    </div>
+  </div>
 </section>
+<div class="modal" data-modal="1">
+  <button type="button" class="modal-close js-modal-close">
+    <svg class="close-icon" width="24" height="24">
+      <use href=""></use>
+    </svg>
+  </button>
+  <img src="" alt="yaht" width="287" />
+  <p class="modal-caption">Thank you</p>
+  <p class="modal-text">
+    Thank you for choosing Yacht Adventures, your booking details have been
+    received and our team will be in touch shortly to confirm your reservation
+    and provide any additional information or assistance you may need.
+  </p>
+</div>
+<div class="backdrop js-backdrop-modal"></div>
+<script type="text/javascript">
+  !(function (e) {
+    'function' != typeof e.matches &&
+      (e.matches =
+        e.msMatchesSelector ||
+        e.mozMatchesSelector ||
+        e.webkitMatchesSelector ||
+        function (e) {
+          for (
+            var t = this,
+              o = (t.document || t.ownerDocument).querySelectorAll(e),
+              n = 0;
+            o[n] && o[n] !== t;
+
+          )
+            ++n;
+          return Boolean(o[n]);
+        }),
+      'function' != typeof e.closest &&
+        (e.closest = function (e) {
+          for (var t = this; t && 1 === t.nodeType; ) {
+            if (t.matches(e)) return t;
+            t = t.parentNode;
+          }
+          return null;
+        });
+  })(window.Element.prototype);
+
+  document.addEventListener('DOMContentLoaded', function () {
+    var modalButtons = document.querySelectorAll('.js-open-modal'),
+      overlay = document.querySelector('.js-backdrop-modal'),
+      closeButtons = document.querySelectorAll('.js-modal-close');
+
+    modalButtons.forEach(function (item) {
+      item.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        var modalId = this.getAttribute('data-modal'),
+          modalElem = document.querySelector(
+            '.modal[data-modal="' + modalId + '"]'
+          );
+
+        modalElem.classList.add('active');
+        overlay.classList.add('active');
+      });
+    });
+
+    closeButtons.forEach(function (item) {
+      item.addEventListener('click', function (e) {
+        var parentModal = this.closest('.modal');
+
+        parentModal.classList.remove('active');
+        overlay.classList.remove('active');
+      });
+    }); // end foreach
+
+    document.body.addEventListener(
+      'keyup',
+      function (e) {
+        var key = e.keyCode;
+
+        if (key == 27) {
+          document.querySelector('.modal.active').classList.remove('active');
+          document.querySelector('.backdrop').classList.remove('active');
+        }
+      },
+      false
+    );
+
+    overlay.addEventListener('click', function () {
+      document.querySelector('.modal.active').classList.remove('active');
+      this.classList.remove('active');
+    });
+  });
+</script>
