--- a/src/css/yahts-block.css
+++ b/src/css/yahts-block.css
@@ -1,5 +1,177 @@
 /* Руслан Афанасьев */
 
-.yahts{
-    background-color: rgb(245, 198, 224);
+:root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  background: var(--dark-blue, #11131f);
+}
+
+.swiper {
+  width: 335px;
+  height: 469px;
+  margin: 0 auto;
+}
+
+.yahts-section {
+  padding-bottom: 40px;
+  padding-top: 40px;
+}
+.container-swiper {
+  position: relative;
+}
+.container-swiper::after {
+  display: block;
+  position: absolute;
+  content: '';
+  width: 255px;
+  height: 255px;
+  transform: rotate(-44.916deg);
+  flex-shrink: 0;
+  border-radius: 323px;
+  opacity: 0.6000000238418579;
+  background: #91afba;
+  filter: blur(100px);
+
+  top: -50px;
+  left: -60px;
+  z-index: 0;
+}
+.container-swiper::before {
+  display: block;
+  position: absolute;
+  content: '';
+  width: 195px;
+  height: 195px;
+  transform: rotate(-44.916deg);
+  flex-shrink: 0;
+  border-radius: 323px;
+  opacity: 0.6000000238418579;
+  background: #91afba;
+  filter: blur(100px);
+
+  top: -50px;
+  left: 160px;
+  z-index: 0;
+}
+.yahtsblock-bt {
+  padding: 12px 28px;
+  border-radius: 60px;
+  border: 1px solid var(--white, #f6f5ef);
+  color: var(--white, #f6f5ef);
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: -0.63px;
+  background: var(--dark-blue, #11131f);
+
+  margin-bottom: 94px;
+}
+.yahtsblock-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  /* max-width: 335px; */
+  margin: 0 auto;
+}
+.yahtsblock-tittle {
+  max-width: 310px;
+  color: var(--white, #f6f5ef);
+  font-family: DM Sans;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 110%;
+  letter-spacing: -1.62px;
+}
+.yahtsblock-subject {
+  color: var(--white, #f6f5ef);
+  /* text-overflow: ellipsis; */
+  /* whitespace: nowrap; */
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: -0.72px;
+  text-transform: uppercase;
+}
+.yahtsblock-text {
+  color: var(--white, #f6f5ef);
+  font-family: DM Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 118%;
+  letter-spacing: 0.36px;
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+.yahtsblock-holder {
+  display: flex;
+  margin-top: 24px;
+  margin-left: 24px;
+  justify-content: space-between;
+  max-width: 287px;
+}
+.swiper-slide {
+  background: var(--blue-2, #1f212d);
+  border-radius: 24px;
+}
+.yahtsblock-img {
+  border-radius: 24px;
+  margin-top: 18px;
+  margin-left: 18px;
+
+  /* background: url(<path-to-image>),
+    lightgray -6.748px 0px / 115.615% 106.773% no-repeat; */
+}
+.yahtsblock-item {
+  color: var(--white, #f6f5ef);
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 118%; /* 16.52px */
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+.yahtsblock-items {
+  color: var(--white, #f6f5ef);
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 118%; /* 16.52px */
+  letter-spacing: 0.42px;
+}
+.yahtsblock-list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.yahtsblock-box {
+  display: flex;
+  gap: 32px;
+  margin-top: 24px;
+  margin-left: 24px;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  margin-top: 220px;
 }
