--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -1,5 +1,294 @@
 <!-- Руслан Афанасьев -->
 
-<section class="yahts">
-  <p>hello</p>
+<section class="yahts-section">
+  <div class="container container-swiper">
+    <div class="yahtsblock-container">
+      <h1 class="yahtsblock-tittle">
+        Choose your dream yacht and sail away into the sunset
+      </h1>
+      <button class="yahtsblock-bt">Yacht rental</button>
+    </div>
+    <!-- Slider main container -->
+
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/arrow-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">Arrow</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">48m(155ft)</li>
+                <li class="yahtsblock-items">Admiral</li>
+                <li class="yahtsblock-items">2021</li>
+                <li class="yahtsblock-items">11 in 5 cabins</li>
+                <li class="yahtsblock-items">€33,500,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/benetti-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">BENETTI OASIS 40M...</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">41m (133ft)</li>
+                <li class="yahtsblock-items">Benetti</li>
+                <li class="yahtsblock-items">2025</li>
+                <li class="yahtsblock-items">10 in 5 cabins</li>
+                <li class="yahtsblock-items">€23,210,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/belle-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">BELLE ANNA</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">50m(155ft)</li>
+                <li class="yahtsblock-items">ISA</li>
+                <li class="yahtsblock-items">2012</li>
+                <li class="yahtsblock-items">12 in 6 cabins</li>
+                <li class="yahtsblock-items">€21,000,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/ellen-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">Ellen</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">40m (132ft)</li>
+                <li class="yahtsblock-items">Perini Navi</li>
+                <li class="yahtsblock-items">2001 / 2016 (refitted)</li>
+                <li class="yahtsblock-items">9 in 4 cabins</li>
+                <li class="yahtsblock-items">€9,300,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/mirage-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">MIRAGE 401</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">38m (125ft)</li>
+                <li class="yahtsblock-items">Gianetti Custom Yachts</li>
+                <li class="yahtsblock-items">2024</li>
+                <li class="yahtsblock-items">10 in 5 cabins</li>
+                <li class="yahtsblock-items">€13,500,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/king-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">KING</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">33m (109ft)</li>
+                <li class="yahtsblock-items">Overmarine</li>
+                <li class="yahtsblock-items">2004 / 2018 (refitted)</li>
+                <li class="yahtsblock-items">9 in 4 cabins</li>
+                <li class="yahtsblock-items">€1,850,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/salt-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">SALT</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">32m (105ft)</li>
+                <li class="yahtsblock-items">SanLorenzo</li>
+                <li class="yahtsblock-items">2019</li>
+                <li class="yahtsblock-items">11 in 5 cabins</li>
+                <li class="yahtsblock-items">€7,800,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/storm-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">STORM</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">32m (103ft)</li>
+                <li class="yahtsblock-items">Overmarine</li>
+                <li class="yahtsblock-items">2005 / 2022 (refitted)</li>
+                <li class="yahtsblock-items">9 in 4 cabins</li>
+                <li class="yahtsblock-items">€2,900,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./img/yaht/collu-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">COLLU</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">29m (96ft)</li>
+                <li class="yahtsblock-items">Ferretti</li>
+                <li class="yahtsblock-items">2014</li>
+                <li class="yahtsblock-items">10 in 5 cabins</li>
+                <li class="yahtsblock-items">$4,300,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sfdg">
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+    </div>
+  </div>
 </section>
