--- a/src/css/rent-block.css
+++ b/src/css/rent-block.css
@@ -1,20 +1,18 @@
 /* Надія Павлюченко */
 
 .rent {
-  padding-bottom: 80px;
-  background-color: var(--blue-2);
-  color: var(--white);
-  position: relative;
-  overflow: hidden;
+  font-family: DM Sans, sans-serif;
+  padding: 40px 0;
 }
+
 @media only screen and (min-width: 768px) {
   .rent {
-    padding-bottom: 100px;
+    padding: 50px 0;
   }
 }
 @media only screen and (min-width: 1280px) {
   .rent {
-    padding-bottom: 164px;
+    padding: 82px 0;
   }
 }
 
@@ -28,7 +26,7 @@
   }
 }
 
-.rent-container::after {
+/* .rent-container::after {
   display: block;
   position: absolute;
   content: '';
@@ -41,7 +39,7 @@
   background: #91afba;
   filter: blur(100px);
 
-  top: 200px;
+  top: 436px;
   left: 200px;
   z-index: 0;
 }
@@ -52,7 +50,7 @@
     transform: rotate(-44.094deg);
     border-radius: 413px;
     top: 100px;
-    left: 600px;
+    left: 530px;
   }
 }
 @media only screen and (min-width: 1280px) {
@@ -64,7 +62,7 @@
     top: 180px;
     left: 1000px;
   }
-}
+} */
 
 @media only screen and (max-width: 767px) {
   .rent-description {
@@ -91,7 +89,7 @@
 }
 @media only screen and (min-width: 768px) {
   .rent-title {
-    width: 287px;
+    width: 271px;
     font-size: 60px;
     letter-spacing: -2.7px;
     margin-bottom: 32px;
@@ -174,7 +172,9 @@
 }
 
 .form-btn {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  gap: 16px;
   min-width: 123px;
   padding: 14px 28px;
   border: 1px solid var(--white);
@@ -209,32 +209,23 @@
   opacity: 0;
   z-index: 20;
   visibility: hidden;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal {
   padding: 40px 24px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  /* --- */
+  position: fixed;
   opacity: 0;
   visibility: hidden;
   z-index: 30;
-  /* --- */
-
   border-radius: 20px;
-  background: var(--blue-2);
+  background-color: var(--blue-2);
   color: var(--white);
-  transform: translate(-50%, -50%) scale(1);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, 30%);
 }
 @media only screen and (max-width: 767px) {
   .modal {
-    /* width: 95%; */
+    width: 95%;
     max-width: 335px;
     height: 95%;
     max-height: 396px;
@@ -253,20 +244,120 @@
   opacity: 1;
   visibility: visible;
 }
+.backdrop.active {
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal.active {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 
-/* .modal::after {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal::after {
   display: block;
   position: absolute;
   content: '';
-  width: 265px;
-  height: 265px;
+  width: 142px;
+  height: 142px;
   transform: rotate(-45.074deg);
   flex-shrink: 0;
-  border-radius: 265px;
+  border-radius: 142px;
   opacity: 0.6000000238418579;
   background: #91afba;
   filter: blur(100px);
+  z-index: -1;
 
-  top: 150px;
-  left: 200px;
-} */
+  top: 80px;
+  left: 50px;
+}
+@media only screen and (min-width: 768px) {
+  .modal::after {
+    width: 265px;
+    height: 265px;
+    border-radius: 265px;
+    top: 100px;
+    left: 150px;
+  }
+}
+
+.modal-close {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  color: var(--white);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+  .modal-close {
+    top: 32px;
+    right: 32px;
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.modal-close:hover,
+.modal-close:active {
+  color: var(--light-green);
+}
+
+.close-icon {
+  stroke: currentColor;
+}
+@media only screen and (min-width: 768px) {
+  .close-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.modal-yaht {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .modal-yaht {
+    margin-top: 33px;
+    margin-bottom: 21px;
+  }
+}
+
+.modal-caption {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: -1.44px;
+  margin-bottom: 14px;
+}
+@media only screen and (min-width: 768px) {
+  .modal-caption {
+    margin-bottom: 16px;
+  }
+}
+
+.modal-text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: -0.28px;
+}
+@media only screen and (min-width: 768px) {
+  .modal-text {
+    font-size: 16px;
+    line-height: 1.4;
+    letter-spacing: -0.32px;
+  }
+}
