--- a/src/css/about-block.css
+++ b/src/css/about-block.css
@@ -1,20 +1,68 @@
 /* Olena Demydova */
 
+  /* Убрать после подключения общих */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ol,ul {
+list-style: none;
+margin: 0;
+padding-left: 0;
+}
+
+a {
+    text-decoration:none;
+    color:currentColor
+  }
+
 .about {
+  /* Убрать после подключения общих */
+  background-color: #11131F;
+  padding: 40px 20px;
+
 }
 .about-block {
+  max-width: 355px;
+  margin: 0 auto;
+}
+@media only screen and (min-width: 768px) {
+  .about-block {
+    max-width: 704px;
+  } 
+}
+@media only screen and (min-width: 1280px) {
+  .about-block {
+    max-width: 1216px;
+  } 
 }
 .about-text-block {
     display: flex;
     margin: 0 auto;
     margin-bottom: 40px;
+    flex-wrap: wrap;
+
 }
 
 @media only screen and (min-width: 768px) {
   .about-text-block {
       margin-bottom: 64px;
+
+    
   } 
 }
+@media only screen and (min-width: 1280px) {
+  .about-text-block {
+    justify-content: space-between;
+
+  }
+  }
 
 .about-big-text {
     color: var(--white, #F6F5EF);
@@ -24,7 +72,7 @@
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: -1.08px;
-
+  
     margin-bottom: 40px;
 }
 @media only screen and (min-width: 768px) {
@@ -50,7 +98,7 @@
     background: var(--linear-green, linear-gradient(107deg, #BEC7C2 0%, #A1B5BA 100%));
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: transparent;
 }
 @media only screen and (min-width: 768px) {
     .about-color-text {
@@ -68,13 +116,12 @@
     letter-spacing: -0.28px;
     
     display: flex;
-    margin: 0 auto;
     gap:14px;
 }
 @media only screen and (min-width: 768px) {
     .about-small-text {
         gap:32px;
-        justify-content: flex-end;
+        margin-left: auto;
         width: 400px;
 
         font-size: 16px;
@@ -83,14 +130,45 @@
 }
 
 .about-image-block {
+  margin: 0 auto;
 }
 .about-image-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
+.about-image-item3 {
+  margin-left: auto;
+} 
+@media only screen and (min-width: 768px) {
+  .about-image-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+  .about-image-item3 {
+    position: relative;
+    top:200px;
+    margin-left: 0;
+  } 
+}
+
+@media only screen and (min-width: 1280px) {
+  .about-image-item2 {
+    order: -1;
+    position: relative;
+    top: 253px;
+  }
+  .about-image-item3 {
+    top: 505px;
+    right: 565px;
+  } 
+}
+
 .about-image-item {
 }
 .about-image1 {
 }
 .about-image2 {
-}
-.about-image3 {
 }
