--- a/src/partials/about-blok.html
+++ b/src/partials/about-blok.html
@@ -15,23 +15,50 @@
     </div>
     <div class="about-image-block">
       <ul class="about-image-list">
-        <li class="about-image-item">
+        <li class="about-image-item1">
+        <picture class="about-image-pic">
+          <source media="(max-width: 768px)"
+          srcset="../images/about/mob_yacht1@x1.png 1x, 
+          ../images/about/mob_yacht1@x2.png 2x" />
+          <source media="(max-width: 1279px)"
+          srcset="../images/about/tab_yacht1@x1.png 1x, 
+          ../images/about/tab_yacht1@x2.png 2x" />
+          <source media="(min-width: 1280px)"
+          srcset="../images/about/desk_yacht1@x1.png 1x, 
+          ../images/about/desk_yacht1@x2.png 2x" />
           <img class="about-image1" 
-          src="/src/images/about/mob_yacht1@x1.png" 
-          srcset="/src/images/about/mob_yacht1@x1.png 1x, /src/images/about/mob_yacht1@x2.png 2x" 
-          alt="Yacht" width="" height="">
+          src="../images/about/desk_yacht1@x1.png" alt="Yacht" />
+        </picture>
       </li>
-        <li class="about-image-item">
-          <img class="about-image2" 
-          src="/src/images/about/mob_yacht2@1x.png" 
-          srcset="/src/images/about/mob_yacht2@x1.png 1x, /src/images/about/mob_yacht2@x2.png 2x" 
-          alt="Yacht" width="" height="">
+        <li class="about-image-item2">
+          <picture class="about-image-pic">
+            <source media="(max-width: 768px)"
+            srcset="../images/about/mob_yacht2@x1.png 1x, 
+            ../images/about/mob_yacht2@x2.png 2x" />
+            <source media="(max-width: 1279px)"
+            srcset="../images/about/tab_yacht2@x1.jpg 1x, 
+            ../images/about/tab_yacht2@x2.jpg 2x" />
+            <source media="(min-width: 1280px)"
+            srcset="../images/about/desk_yacht2@x1.png 1x, 
+            ../images/about/desk_yacht2@x2.png 2x" />
+            <img class="about-image2" 
+            src="../images/about/desk_yacht2@x1.png" alt="Yacht" />
+          </picture>
       </li>
-        <li class="about-image-item">
-          <img class="about-image3" 
-          src="/src/images/about/mob_yacht3@x1.png" 
-          srcset="/src/images/about/mob_yacht3@x1.png 1x, /src/images/about/mob_yacht3@x2.png 2x" 
-          alt="Yacht" width="" height="">
+        <li class="about-image-item3">
+          <picture class="about-image-pic">
+            <source media="(max-width: 768px)"
+            srcset="../images/about/mob_yacht3@x1.png 1x, 
+            ../images/about/mob_yacht3@x2.png 2x" />
+            <source media="(max-width: 1279px)"
+            srcset="../images/about/tab_yacht3@x1.png 1x, 
+            ../images/about/tab_yacht3@x2.png 2x" />
+            <source media="(min-width: 1280px)"
+            srcset="../images/about/desk_yacht3@x1.png 1x, 
+            ../images/about/desk_yacht3@x2.png 2x" />
+            <img class="about-image3" 
+            src="../images/about/desk_yacht3@x1.png" alt="Yacht" />
+          </picture>
       </li>
       </ul>
     </div>
