--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,92 @@
 /* Marta Bahrynivska */
 
-.hero{
-    background-color: bisque;
+
+.hero-section {
+    background-color: var(--dark-blue);
+}
+
+.container {
+}
+
+.hero-title {
+    color: var(--white);
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 0.66;
+    letter-spacing: -2.7px;
+    margin-bottom: 16px;
+    padding-top: 132px;
+    max-width: 554px;
+}
+
+.hero-accent{
+    background: var(--linear-green, linear-gradient(107deg, #BEC7C2 0%, #A1B5BA 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 60px;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 110%;
+    letter-spacing: -2.7px;
+}
+
+.hero-text {
+    color: var(--white);
+    line-height: 140%;
+    /* 22.4px */
+    letter-spacing: -0.32px;
+    width: 539px;
+    margin-bottom: 32px;
+}
+
+.button-container{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 11px;
+}
+
+.start-button {
+    display: block;
+    min-width: 150px;
+    height: 48px;
+    padding: 14px 28px;
+    border: none;
+    border-radius: 60px;
+    background-color: var(--light-green);
+    color: var(--white);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 110%;
+        /* 19.8px */
+    letter-spacing: -0.81px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.start-button:focus,
+.start-button:hover{
+    background-color: #88B3B9;
+}
+
+.explore-button {
+    display: block;
+    min-width: 117px;
+    height: 48px;
+    padding: 14px 28px;
+    border-radius: 60px;
+    border: 1px solid var(--white);
+    background-color: transparent;
+    color: var(--white, #F6F5EF);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 110%;
+        /* 19.8px */
+    letter-spacing: -0.81px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.explore-button:focus,
+.explore-button:hover{
+    color: var(--light-green);
 }
