--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,14 @@
 <!-- Marta Bahrynivska -->
 
-<section class="hero">
-  <div>
-    <p>hello</p>
+<section class="hero-section">
+  <div class="container">
+    
+    <h1 class="hero-title">Explore the High Seas with <span class="hero-accent">Our Luxury Yacht</span> Rentals</h1>
+    <p class="hero-text">Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an
+    unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.</p>
+    <div class="button-container">
+      <button class="start-button button" type="button">Get Started</button>
+      <button class="explore-button button" type="button">Explore</button>
+    </div>
   </div>
 </section>
