--- a/src/partials/about-blok.html
+++ b/src/partials/about-blok.html
@@ -4,7 +4,7 @@
   <div class="about-block">
     <div class="about-text-block">
       <p class="about-big-text">
-        <span class="about-color-text">Yacht Adventures</span>
+        <span class="about-color-text">Yacht Adventures </span>
          fleet is here to take you on the ultimate adventure. 
          Each yacht is hand-picked for its comfort, style, and performance.
       </p>
@@ -18,46 +18,46 @@
         <li class="about-image-item1">
         <picture class="about-image-pic">
           <source media="(max-width: 768px)"
-          srcset="../images/about/mob_yacht1@x1.png 1x, 
-          ../images/about/mob_yacht1@x2.png 2x" />
+          srcset="./images/about/mob_yacht1@x1.png 1x, 
+          ./images/about/mob_yacht1@x2.png 2x" />
           <source media="(max-width: 1279px)"
-          srcset="../images/about/tab_yacht1@x1.png 1x, 
-          ../images/about/tab_yacht1@x2.png 2x" />
+          srcset="./images/about/tab_yacht1@x1.png 1x, 
+          ./images/about/tab_yacht1@x2.png 2x" />
           <source media="(min-width: 1280px)"
-          srcset="../images/about/desk_yacht1@x1.png 1x, 
-          ../images/about/desk_yacht1@x2.png 2x" />
+          srcset="./images/about/desk_yacht1@x1.png 1x, 
+          ./images/about/desk_yacht1@x2.png 2x" />
           <img class="about-image1" 
-          src="../images/about/desk_yacht1@x1.png" alt="Yacht" />
+          src="./images/about/desk_yacht1@x1.png" alt="Yacht" />
         </picture>
       </li>
         <li class="about-image-item2">
           <picture class="about-image-pic">
             <source media="(max-width: 768px)"
-            srcset="../images/about/mob_yacht2@x1.png 1x, 
-            ../images/about/mob_yacht2@x2.png 2x" />
+            srcset="./images/about/mob_yacht2@x1.png 1x, 
+            ./images/about/mob_yacht2@x2.png 2x" />
             <source media="(max-width: 1279px)"
-            srcset="../images/about/tab_yacht2@x1.jpg 1x, 
-            ../images/about/tab_yacht2@x2.jpg 2x" />
+            srcset="./images/about/tab_yacht2@x1.jpg 1x, 
+            ./images/about/tab_yacht2@x2.jpg 2x" />
             <source media="(min-width: 1280px)"
-            srcset="../images/about/desk_yacht2@x1.png 1x, 
-            ../images/about/desk_yacht2@x2.png 2x" />
+            srcset="./images/about/desk_yacht2@x1.png 1x, 
+            ./images/about/desk_yacht2@x2.png 2x" />
             <img class="about-image2" 
-            src="../images/about/desk_yacht2@x1.png" alt="Yacht" />
+            src="./images/about/desk_yacht2@x1.png" alt="Yacht" />
           </picture>
       </li>
         <li class="about-image-item3">
           <picture class="about-image-pic">
             <source media="(max-width: 768px)"
-            srcset="../images/about/mob_yacht3@x1.png 1x, 
-            ../images/about/mob_yacht3@x2.png 2x" />
+            srcset="./images/about/mob_yacht3@x1.png 1x, 
+            ./images/about/mob_yacht3@x2.png 2x" />
             <source media="(max-width: 1279px)"
-            srcset="../images/about/tab_yacht3@x1.png 1x, 
-            ../images/about/tab_yacht3@x2.png 2x" />
+            srcset="./images/about/tab_yacht3@x1.png 1x, 
+            ./images/about/tab_yacht3@x2.png 2x" />
             <source media="(min-width: 1280px)"
-            srcset="../images/about/desk_yacht3@x1.png 1x, 
-            ../images/about/desk_yacht3@x2.png 2x" />
+            srcset="./images/about/desk_yacht3@x1.png 1x, 
+            ./images/about/desk_yacht3@x2.png 2x" />
             <img class="about-image3" 
-            src="../images/about/desk_yacht3@x1.png" alt="Yacht" />
+            src="./images/about/desk_yacht3@x1.png" alt="Yacht" />
           </picture>
       </li>
       </ul>
