update form pattern

--- a/src/partials/rent-block.html
+++ b/src/partials/rent-block.html
@@ -37,7 +37,7 @@
       </picture>
     </div>
     <div class="form-container">
-      <form class="rent-form" name="rent_form" autocomplete="off">
+      <form class="rent-form" name="rent_form" autocomplete="off" method="post">
         <label class="form-label">
           <span class="label-text">Full Name</span>
           <input
@@ -46,6 +46,7 @@
             name="user_name"
             id="user_name"
             pattern="^[A-Z][a-z]+$"
+            required
           />
         </label>
         <label class="form-label">
@@ -55,7 +56,8 @@
             class="form-input rent-input"
             name="user_email"
             id="user_email"
-            pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+            pattern="^[^@]+@([^@\.]+\.)+[^@\.]+$"
+            required
           />
         </label>
         <label class="form-label">
@@ -66,6 +68,7 @@
             name="user_tel"
             id="user_tel"
             pattern="^(?:\+?38)?0\d{9}$"
+            required
           />
         </label>
         <label class="form-textarea-label">
@@ -78,7 +81,12 @@
           >
           </textarea>
         </label>
-        <button type="submit" class="form-btn js-open-modal" data-modal="1">
+        <button
+          type="submit"
+          class="form-btn js-open-modal"
+          id="button-open"
+          data-modal="1"
+        >
           Send
           <svg class="form-icon" width="18" height="9">
             <use href="./images/icons.svg#icon-arrow1"></use>
