--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -6,7 +6,7 @@
       <h1 class="yahtsblock-tittle">
         Choose your dream yacht and sail away into the sunset
       </h1>
-      <button class="yahtsblock-bt">Yacht rental</button>
+      <button class="yahtsblock-bt" type="button">Yacht rental</button>
     </div>
     <!-- Slider main container -->
 
@@ -16,8 +16,11 @@
         <!-- Slides -->
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/arrow-mobile@1x.jpg 1x,
+              ./img/yaht/arrow-mobile@2x.jpg 2x
+            "
             src="./img/yaht/arrow-mobile@1x.jpg"
-            src="./images/yaht-blok/arrow-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -47,8 +50,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/benetti-mobile@1x.jpg 1x,
+              ./img/yaht/benetti-mobile@2x.jpg 2x
+            "
             src="./img/yaht/benetti-mobile@1x.jpg"
-            src="./images/yaht-blok/benetti-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -78,8 +84,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/belle-mobile@1x.jpg 1x,
+              ./img/yaht/belle-mobile@2x.jpg 2x
+            "
             src="./img/yaht/belle-mobile@1x.jpg"
-            src="./images/yaht-blok/belle-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -109,8 +118,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/ellen-mobile@1x.jpg 1x,
+              ./img/yaht/ellen-mobile@2x.jpg 2x
+            "
             src="./img/yaht/ellen-mobile@1x.jpg"
-            src="./images/yaht-blok/ellen-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -140,8 +152,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/mirage-mobile@1x.jpg 1x,
+              ./img/yaht/mirage-mobile@2x.jpg 2x
+            "
             src="./img/yaht/mirage-mobile@1x.jpg"
-            src="./images/yaht-blok/mirage-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -171,8 +186,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/king-mobile@1x.jpg 1x,
+              ./img/yaht/king-mobile@2x.jpg 2x
+            "
             src="./img/yaht/king-mobile@1x.jpg"
-            src="./images/yaht-blok/king-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -202,8 +220,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/salt-mobile@1x.jpg 1x,
+              ./img/yaht/salt-mobile@2x.jpg 2x
+            "
             src="./img/yaht/salt-mobile@1x.jpg"
-            src="./images/yaht-blok/salt-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -233,8 +254,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/storm-mobile@1x.jpg 1x,
+              ./img/yaht/storm-mobile@2x.jpg 2x
+            "
             src="./img/yaht/storm-mobile@1x.jpg"
-            src="./images/yaht-blok/storm-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -264,8 +288,11 @@
         </div>
         <div class="swiper-slide">
           <img
+            srcset="
+              ./img/yaht/collu-mobile@1x.jpg 1x,
+              ./img/yaht/collu-mobile@2x.jpg 2x
+            "
             src="./img/yaht/collu-mobile@1x.jpg"
-            src="./images/yaht-blok/collu-mobile@1x.jpg"
             width="299px"
             height="251px"
             class="yahtsblock-img"
@@ -295,8 +322,15 @@
         </div>
       </div>
       <div class="sfdg">
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <svg class="swiper-button-prev" width="18" height="8">
+          <use href="../images/icons.svg#icon-arrow2"></use>
+        </svg>
+        <!-- <div class="swiper-button-prev"></div> -->
+
+        <svg class="swiper-button-next" width="18" height="8">
+          <use href="../images/icons.svg#icon-arrow1"></use>
+        </svg>
+        <!-- <div class="swiper-button-next"></div> -->
       </div>
     </div>
   </div>
