--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -3,7 +3,7 @@
 <section class="yahts-section">
   <div class="container container-swiper">
     <div class="yahtsblock-container">
-      <h1 class="yahtsblock-tittle">
+      <h1 id="Yachts" class="yahtsblock-tittle">
         Choose your dream yacht and sail away into the sunset
       </h1>
       <button class="yahtsblock-bt">Yacht rental</button>
