--- a/src/css/about-block.css
+++ b/src/css/about-block.css
@@ -1,6 +1,6 @@
 /* Olena Demydova */
 
-  /* Убрать после подключения общих */
+  /* Убрать после подключения общих
 h1,
 h2,
 h3,
@@ -20,14 +20,11 @@ padding-left: 0;
 a {
     text-decoration:none;
     color:currentColor
-  }
+  } */
 
 .about {
-  /* Убрать после подключения общих */
-  background-color: #11131F;
-  padding: 40px 20px;
-
 }
+
 .about-block {
   max-width: 355px;
   margin: 0 auto;
@@ -53,14 +50,11 @@ a {
 @media only screen and (min-width: 768px) {
   .about-text-block {
       margin-bottom: 64px;
-
-    
   } 
 }
 @media only screen and (min-width: 1280px) {
   .about-text-block {
     justify-content: space-between;
-
   }
   }
 
