--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -321,6 +321,9 @@
           </div>
         </div>
       </div>
+      
+      
+      </div>
       <div class="sfdg">
         <svg class="swiper-button-prev" width="18" height="8">
           <use href="../images/icons.svg#icon-arrow2"></use>
